Walk Navigation: Up and Down is interrupted by WASD #115909

Closed
opened 2023-12-07 18:54:22 +01:00 by Vas · 1 comment

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.17

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-06 00:37, hash: 27992034f2e6
Worked: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-26 23:45, hash: 86a0d0015ac7

Short description of error
I discovered a small but annoying discrepancy in Walk Navigation mode
When you release any of WASD keys while pressing Up or Down (Q or E) the movement abruptly stop
The same issue doesn't happen when its only WASD keys
This seem to be 4.1 version issue only

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]

  • Default file
  • in 3D View, go to View > Navigation > Walk Navigation
  • Press Q and any of WASD keys
  • Keep holding Q and release any of WASD keys
  • Movement stops
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.17 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-06 00:37, hash: `27992034f2e6` Worked: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-26 23:45, hash: `86a0d0015ac7` **Short description of error** I discovered a small but annoying discrepancy in Walk Navigation mode When you release any of WASD keys while pressing Up or Down (Q or E) the movement abruptly stop The same issue doesn't happen when its only WASD keys This seem to be 4.1 version issue only <video src="/attachments/badf2b9a-e989-48ce-974e-651f13455adf" title="2023-12-07 17-17-11.mp4" controls></video> **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] - Default file - in 3D View, go to View > Navigation > Walk Navigation - Press Q and any of WASD keys - Keep holding Q and release any of WASD keys - Movement stops
Vas added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-12-07 18:54:23 +01:00
Richard Antalik added
Module
Modeling
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2023-12-07 19:11:07 +01:00
Member

Can confirm as well. 93f6001683 , c62009a6ac are possible culprit, I'll check

Can confirm as well. 93f60016833db1d7fe6122571e75e10da5800c05 , c62009a6ac961e199285dee0d7b5037132a067a7 are possible culprit, I'll check
Pratik Borhade self-assigned this 2023-12-08 11:37:41 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-08 15:53:12 +01:00
Brecht Van Lommel added
Type
Bug
and removed
Type
Report
labels 2023-12-11 16:05:16 +01:00
Brecht Van Lommel added the
Interest
Modeling
label 2023-12-11 16:08:13 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115909
No description provided.