Fix #115909: Walk Navigation Up and Down is interrupted by WASD

Caused by 93f6001683 , 1b3cfcc74f .
Direction flag names was changed but the max value passed to `ENUM_OPERATORS`
wasn't pointing to actual max value.

Pull Request: https://projects.blender.org/blender/blender/pulls/115926